Hid scrollbar in Skills to prevent page resizing snap.

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@ body{
   overflow-x: hidden;
 }
 
+body::-webkit-scrollbar{
+  width: 0px;
+  
+}
+
 .App {
   /*text-align: center;*/
   height: 100vh;
